--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,15 @@ body {
     height: 100%;
 }
 
+.hidden_scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+.hidden_scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
 @layer base {
     :root {
         --dark: 0, 0%, 11%;
