feat: added color.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,6 +27,8 @@ body {
         --background: 0, 0%, 96%;
         /*--foreground: 0, 0%, 33%;*/
         --foreground: 48, 96%, 45%;
+
+        --darkened: 347, 16%, 22%;
         --yellow-01: 48, 93%, 40%;
 
         --card: 0 0% 100%;
